--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,16 @@ a{
     text-decoration: none;
 }
 
+.title {
+    letter-spacing: 0.1rem;
+    font-style: italic;
+    border-bottom: 1px dashed rgb(9,93,119);
+    color: rgb(9,93,119);
+    margin: 0 auto;
+    margin-bottom: 20px;
+    max-width: 1280px;
+
+}
 /*............Header ...................*/
 .header {
     width: 100%;
@@ -215,4 +225,170 @@ a{
     line-height: 1.5;
 
 }
-/*............ End About ...................*/
+/*............ End of About ...................*/
+
+/*............Education ...................*/
+.education{
+    margin: 20px 0;
+} 
+
+.single-education{
+    background: rgb(17,115,145);
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 18px;
+    color: white;
+    padding: 5px 10px;
+    letter-spacing: 0.1rem;
+}
+
+@media screen and (min-width:860px){
+    .education-center{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .single-education{
+        flex: 0 0 calc(50%-20px);
+        margin-right: 0;
+        margin-left: 0;
+        padding: 10px;
+        clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100% );
+    }
+}
+/*............ End of Education ...................*/
+
+/*............ Projects ...................*/
+
+.single-project{
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 0 0 4px 1px gray;
+    margin-bottom: 30px;
+}
+
+.single-project-img{
+    width: 100%;
+    margin: 0 auto;
+    height: 350px;
+    
+
+}
+
+.single-project-img img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    padding: 10px;
+}
+
+.single-project-info{
+    padding: 10px;
+}
+
+.single-project-info h3{
+    letter-spacing: 0.1rem;
+    margin-bottom: 5px;
+    color: rgb(9,93,119);
+}
+
+.single-project-info p{
+    color: #424242;
+    font-size: 18px;
+}
+
+@media screen and (min-width: 664px){
+    .projects-center{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .single-project{
+        display: flex;
+
+    }
+
+    .single-project-img{
+        width:300px;
+        height: 280px;
+    }
+
+    .single-project-img img{
+        width:300px;
+        height: 280px;
+    }
+}
+
+@media screen and (min-width: 964){
+    .projects-center{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        display: flex;
+        max-width: 1180px;
+        margin: 0 auto;
+    }
+    .single-project{
+        display: flex;
+        flex: 0 0 calc(49%);
+        margin: 0 0;
+        margin-bottom:  25px;
+        position: relative;
+    }
+
+    .single-project-img{
+        width:250px;
+        height: 250px;
+    }
+
+    .single-project-img img{
+        width:250px;
+        height: 250px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .single-project:hover .single-project-img img{
+        transform: scale(1.05);
+    }
+}
+
+/*............ End of Projects ...................*/
+
+/*............ Experience ...................*/
+
+.experience-center{
+    margin-top: 20px;
+}
+
+.single-experience{
+    background: rgb(17,115,145);
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 18px;
+    color: white;
+    padding: 5px 10px;
+    letter-spacing: 0.1rem;
+    background: rgb(191,192,192);
+    color: #424242;
+
+}
+
+@media screen and (min-width:860px) {
+    .experience-center{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+    }
+
+    .single-experience{
+        flex: 0 0 calc(50% - 20px);
+        margin-right: 0;
+        margin-left: 0;
+        padding: 10px;
+    }
+    
+}
+/*............ End of Experience ...................*/
+
