finished the main part of the front end and moved to the login and the admin section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -392,3 +392,104 @@ a{
 }
 /*............ End of Experience ...................*/
 
+/*............ footer ...................*/
+.main-contact{
+    background: rgb(9,93,119);
+}
+
+.contact-center{
+    padding: 20px 0;
+}
+
+.contact-center-links{
+    margin-bottom: 20px;
+}
+
+.contact-center-links h3, .contact-center-media h3{
+    text-align: center;
+    letter-spacing: 0.2rem;
+    color: lightgray;
+    margin-bottom: 10px;
+}
+
+.contact-links{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-media{
+    display: flex;
+    justify-content: center;
+}
+
+.contact-links li{
+    margin-bottom: 10px;
+    color: rgb(192,190,190);
+}
+
+.contact-links li{
+    margin: 0 5px;
+    color: rgb(192,190,190);
+    font-size: 18px;
+    display: inline-block;
+    padding: 0 2px;
+}
+
+.contact-links li a:hover{
+    margin: 0 5px;
+    color: rgb(226,225,225);
+}
+
+.contact-media li a{
+    margin: 0 5px;
+    color: rgb(192,190,190);
+    padding: 5px;
+    font-size: 18px;
+}
+
+.contact-media li a:hover{
+    color: rgb(226,225,225);
+}
+
+.contact-media li a i{
+    margin: 0 5px;
+    color: rgb(192,190,190);
+    font-size: 20px;
+}
+
+.footer{
+    border-top: 1px solid lightgray;
+    text-align: center;
+    color: lightgray;
+    font-style: italic;
+    padding: 10px 0;
+    font-size: 18px;
+}
+
+@media screen and (min-width: 530px){
+    .contact-links li{
+        margin-bottom: 0;
+    }
+
+    .contact-links, .contact-media{
+        display: flex;
+    }
+}
+
+@media screen and (min-width: 864px){
+    .contact-links li a i{
+        font-size: 24px;
+    }
+
+}
+
+@media screen and (min-width: 864px){
+    .contact-center{
+        display: flex;
+        justify-content: space-event;
+    }
+
+
+}
+/*............ End of footer ...................*/
