--- a/client/src/components/AdminComponents/admin.css
+++ b/client/src/components/AdminComponents/admin.css
@@ -77,10 +77,10 @@ form button:hover{
     width: 400px;
     margin: 0 auto;
     position: absolute;
-    top: 100px;
+    top: 5px;
     left: 50%;
     display: block;
-    transform: translate(-50%);
+    transform: translateX(-50%);
 }
 
 .same-item .icons{
