--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,16 @@
+
+@font-face {
+  font-family: "cmss";
+  src: local("cmss"),
+   url("./fonts/cmunss.ttf") format("truetype");
+  font-weight: bold;
+  }
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+   font-family: 'cmss' ,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
